--- a/luxCampus17/src/main/resources/application.properties
+++ b/luxCampus17/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:8100/blog
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=jacksparrow
 spring.datasource.password=horriblesecret
