Thirty third draft
1. added user table and generator definition to setup script;
2. added User entity and DAO classes;
3. added EncoderConfig configuration class for passwordEncoder bean;
4. added BasicAuthProvider class as AuthenticationProvider
implementation;
5. class SpringSecurityConfig sets up BasicAuthProvider authentication
provider and configures access to endpoints for 'admin', 'user' and
unauthorized users.

--- a/luxCampus17/src/main/resources/application.properties
+++ b/luxCampus17/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=jacksparrow
 spring.datasource.password=horriblesecret
+spring.security.user.name=user
+spring.security.user.password=$2a$10$lylAQt57JJBszeNu9CPb.eUBbyikDyPkYCRGCfVqTQQamL1UaJWoe
