Thirty fifth draft
1. SpringSecurityConfig adapted for JWT tokens authentication;
2. added JWT tokens authentication support components JwtConfig,
JwtSecretKey, JwtTokenVerifier, JwtUserNamePasswordAuthFilter,
UsernamePasswordAuthRequest;
3. JWT properties added to application properties file.

--- a/luxCampus17/src/main/resources/application.properties
+++ b/luxCampus17/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=jacksparrow
 spring.datasource.password=horriblesecret
 spring.security.user.name=user
 spring.security.user.password=$2a$10$lylAQt57JJBszeNu9CPb.eUBbyikDyPkYCRGCfVqTQQamL1UaJWoe
+application.jwt.secretKey=this-is-very-safe-and-secure-sequence-of-bytes-for-strong-and-robust-key
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAtferDays=7
